  reduced list when there is a large number of unstopped threads.

thread apply thread-list|all|all-lanes -unavailable
  Command now defaults to applying only to available threads.  To
  restore previous behaviour of applying also to unavailable
  threads the option "-unavailable" is added.

* Add convenience variable `$_simd_lane`.

* MI changes

  ** New field in '-thread-info': 'thread-workgroup'

     Added a new field to the '-thread-info' command.  If the thread is
     stopped, available, and the workgroup is defined for its arch,
     the new field contains a string with 3D tuple: "x, y, z" that
     denotes the coordinates of the thread workgroup.

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.  If a thread is stopped at a breakpoint, add
     'hit-lanes-mask' to its output.  The mask encodes for which lanes
     the breakpoint condition was evaluated to true.

* New remote packets

e

  Fetch the "expedited" registers from the remote target.  These are
  the registers that are deemed the most important by the target and
  are typically the same as those sent in a 'T' stop reply packet.
  The 'e' packet is can be an alternative to the 'g' packet to reduce
  the transfer overhead between GDB and the remote target when the
  complete register file of a thread is large.

x
